[package]
name = "procon-calender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version="0.14.24", features = ["full"] }
hyper-tls = "0.5.0"
reqwest = {version = "0.11.14", features = ["json"]}
scraper = "0.15.0"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
tokio = {version = "1.26.0", features = ["full"]}
