[package]
name = "procon-calender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.23", features = ["serde"]}
flate2 = "1.0.25"
hyper = {version = "0.14.24", features = ["full"] }
hyper-tls = "0.5.0"
jsonwebtoken = "8.2.0"
regex = "1.7.1"
scraper = "0.15.0"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
tokio = {version = "1.26.0", features = ["full"]}
